@@ -37,6 +37,7 @@ dillo-3.1 [not released yet]
  - Handle irix's version of vsnprintf().
  - INPUT, TEXTAREA placeholder attribute.
  - Better notification when user's domainrc settings block page redirection.
+ - Fix bug with font_factor preference and CSS font-size:(larger|smaller).
    Patches: corvid
 +- Avoid requesting background images if an ancestor has display:none.
  - Ignore built-in search url if any are specified in dillorc.
